@@ -1359,6 +1359,8 @@ nuttx-0.4.5 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Add an enumeration argument to the SPI chip select and status methods so
 	  that the interface can handle more than one device.
 	* eZ80Acclaim!: Add a generic SPI driver for all eZ80 boards.
+	* Add a setmode() method to the SPI interface to handle parts with differing
+	  mode requirements.
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
